# buck2

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  defs.bzl  flake.nix  index.html  lint_levels.bzl  lunr-index-1725503114564.json  rust-toolchain  search-doc.json  test.py
.buckconfig.d/: common.buckconfig
.github/: dotslash-config.json
.github/workflows/: binaries.yml  bootstrap.yml  docker-dev.yml  upload_buck2.yml
.zed/: settings.json  tasks.json
app/buck2/: BUCK  Cargo.toml
app/buck2_build_signals/: BUCK  Cargo.toml
app/buck2_cli_proto/: daemon.proto
app/buck2_client/: BUCK  Cargo.toml
app/buck2_client_ctx/: BUCK  Cargo.toml
app/buck2_data/: data.proto  error.proto
app/buck2_execute/: BUCK  Cargo.toml
app/buck2_execute_impl/: BUCK  Cargo.toml
app/buck2_execute_local/: BUCK
app/buck2_external_cells_bundled/: bundled_cell.bzl
app/buck2_forkserver/: BUCK  Cargo.toml
app/buck2_forkserver_proto/: forkserver.proto
app/buck2_health_check_proto/: health_check.proto
app/buck2_interpreter/: Cargo.toml
app/buck2_interpreter_for_build/: BUCK  Cargo.toml
app/buck2_interpreter_for_build_tests/: Cargo.toml
app/buck2_sandbox/: BUCK  Cargo.toml
app/buck2_sandbox/src/: landlock.rs  lib.rs  symlink_farm.rs
app/buck2_server/: BUCK  Cargo.toml
bootstrap/: buck2  reindeer  rust-project
docs/: index.html
docs/api/: index.html
explorer/: package-lock.json  package.json
pagable/: BUCK
shim/: BUCK
superconsole/: Cargo.toml
tests/: buck_e2e.bzl  check_dependencies_test.bxl  check_dependencies_test.bzl
website/: sidebars.ts
(+682 files in other folders)
